objects/SFDC_Volunteer_Event__c.object
<CustomObject>
    <description>Used to manage and track vounteer events</description>
    <fields>
        <fullName>AE_Attending_Count__c</fullName>
        <formula>CASE( AE_Attending_Picklist__c , &apos;Yes&apos;, 1, &apos;No&apos;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Attending Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_Attending_Picklist__c</fullName>
        <description>This is a picklist to have a dependancy with the representation field.</description>
        <label>AE Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AE_Phone__c</fullName>
        <formula>OE_Grouping__r.Account__r.Account_Executive__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_String__c</fullName>
        <formula>&apos;UserId=&apos; + OE_Grouping__r.Account__r.Account_Executive__r.Id + &apos;&amp;meetingID=&apos; + CASESAFEID( Id ) +&apos;&amp;email=&apos; + OE_Grouping__r.Account__r.Account_Executive__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Attending_Count__c</fullName>
        <formula>CASE(AM_Attending_Picklist__c, &apos;Yes&apos;, 1, &apos;No&apos;, 0, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Attending Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Attending_Picklist__c</fullName>
        <description>This is a picklist to have a dependancy on the representation field</description>
        <label>AM Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Phone__c</fullName>
        <formula>OE_Grouping__r.Account__r.Account_Manager__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_String__c</fullName>
        <formula>&apos;UserId=&apos;+OE_Grouping__r.Account__r.Account_Manager__r.Id+&apos;&amp;meetingID=&apos;+CASESAFEID(Id)+&apos;&amp;email=&apos;+OE_Grouping__r.Account__r.Account_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Exec_Formula__c</fullName>
        <formula>OE_Grouping__r.Account__r.Account_Executive__r.FirstName  + &quot; &quot; + OE_Grouping__r.Account__r.Account_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Executive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Formula__c</fullName>
        <formula>OE_Grouping__r.Account__r.Account_Manager__r.FirstName + &quot; &quot; + OE_Grouping__r.Account__r.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <description>This field will be filled by a workflow and is used by the force.com site to display the account name for the meetings.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>OE_Grouping__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>CASE(OE_Grouping__r.Account__r.Region__c,&quot;West&quot;,&quot;West&quot;,&quot;North East&quot;, &quot;North East&quot;, &quot;South East&quot;, &quot;South East&quot;,&quot;Central&quot;, &quot;Central&quot;, &quot;Unknown Account&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Open Enrollment</relationshipLabel>
        <relationshipName>Open_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_Billed__c</fullName>
        <description>The number of hours billed by the Consultant</description>
        <label>Actual Hours Billed</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Meeting_Hours__c</fullName>
        <description>The sum of the sessions manually entered</description>
        <label>Actual Meeting Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airfare__c</fullName>
        <description>Airfare charged by Consultant</description>
        <label>Airfare</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ambassador_Count__c</fullName>
        <formula>CASE( Facilitator_1_Type__c , &apos;OE Ambassador&apos;,  1 , 0)+ CASE( Facilitator_two_Type__c , &apos;OE Ambassador&apos;, 1, 0) + CASE( Facilitator_three_Type__c , &apos;OE Ambassador&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ambassador Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambassador_Travel__c</fullName>
        <label>Ambassador Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mileage Only</fullName>
                    <default>true</default>
                    <label>Mileage Only</label>
                </value>
                <value>
                    <fullName>Hotel/Car Rental/Mileage</fullName>
                </value>
                <value>
                    <fullName>Airfare/ Hotel /Car</fullName>
                </value>
                <value>
                    <fullName>No Restrictions</fullName>
                </value>
                <value>
                    <fullName>Use Market Guidelines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>OE_Grouping__r.Anthem_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned SA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Open_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bilingual__c</fullName>
        <description>Pick list to indicate if bilingual Facilitator is required.</description>
        <inlineHelpText>Select Yes if bilingual representation is required.  Indicate the language in the meeting comments.</inlineHelpText>
        <label>Bilingual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Tieng-Viet</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buddy_Program_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meeting is Eligible for the buddy program the field is maintained by OE Coordinators because not all fit into a formula.</description>
        <label>Buddy Program Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buddy_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buddy Secured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>California_Region__c</fullName>
        <formula>OE_Grouping__r.Account__r.SARAcctMgmt__r.State_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>California Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Consult_SAR_Attending__c</fullName>
        <label>Client Engagement Consult SAR Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Engagement_Consultant_SAR_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Engagement Consultant SAR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Consultant_SAR_Phone__c</fullName>
        <formula>OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Engagement Consultant SAR Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Consultant_SAR_String__c</fullName>
        <formula>&apos;UserId=&apos; + OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.Id + 
&apos;&amp;meetingID=&apos; + CASESAFEID(Id) + 
&apos;&amp;email=&apos; + OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Engagement Consultant SAR String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Engagement_Consultant_SAR__c</fullName>
        <description>OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.FirstName + &apos; &apos; + OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.LastName</description>
        <formula>OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.FirstName+ &apos; &apos; + OE_Grouping__r.Account__r.Client_Engagement_Consultant_SAR1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Engagement Consultant SAR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Bill_Rate__c</fullName>
        <description>Pay rate for Facilitator 1</description>
        <formula>Facilitator1__r.Agency_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consultant_Comments__c</fullName>
        <description>Field for the manager to enter comments during the recruitment of consultants</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter comments for the OE Coordinator concerning consultant recruitment.</inlineHelpText>
        <label>Consultant Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contractor_Count__c</fullName>
        <formula>CASE( Facilitator_1_Type__c , &apos;Consultant&apos;, 1, 0)+ CASE( Facilitator_two_Type__c , &apos;Consultant&apos;, 1, 0)+ CASE( Facilitator_three_Type__c , &apos;Consultant&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coordinator_Action_Category__c</fullName>
        <description>This field will be used for OE Coordinator daily report sorting.  The goal is to see each or the categories in one report.</description>
        <label>Coordinator Action Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RUSH</fullName>
                </value>
                <value>
                    <fullName>UPDATED</fullName>
                </value>
                <value>
                    <fullName>NEW REQUEST</fullName>
                    <default>true</default>
                    <label>NEW REQUEST</label>
                </value>
                <value>
                    <fullName>IN PROCESS</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordinator_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>automatically check the box if consultant Declined by OE Coordinator</description>
        <label>Coordinator Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Order_Submitted_to_Vendor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the Date the Open Enrollment order was submitted to the vendor</inlineHelpText>
        <label>Date Order Submitted to Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Request_Submitted__c</fullName>
        <description>Georgia value - { can this be captured with Created by??}</description>
        <formula>DATEVALUE(CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_Flexible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dates Flexible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_not_meet_Guidelines_for_Fac_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not meet Guidelines for Fac. / Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_Approved_by_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Draft Approved by Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_Change_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Draft Change Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Draft_Changes_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft Changes Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Draft_OE_Kit_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Draft OE Kit Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective / Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <description>Used to log any errors returned from Bing&apos;s Dataflow API</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Log</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_of_Employees__c</fullName>
        <description>Number of attendees expected to attend (not eligibles at location)</description>
        <inlineHelpText>Number of attendees expected to attend (not eligibles at location</inlineHelpText>
        <label># Expected Attendees(not eligibles@site)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Expenses charged by Consultant</description>
        <label>Expenses</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LG(20140318)This Lookup field is filtered to show only facilitator contacts on the Facilitator Account.</description>
        <label>Facilitator Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment</relationshipLabel>
        <relationshipName>Open_Enrollment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Phone__c</fullName>
        <formula>Facilitator1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_Type__c</fullName>
        <formula>TEXT(Facilitator1__r.Facilitator_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 1 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_1_email__c</fullName>
        <formula>Facilitator1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 1 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_Phone__c</fullName>
        <formula>Facilitator_Two__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_2_email__c</fullName>
        <formula>Facilitator_Two__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 2 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_Phone__c</fullName>
        <formula>Facilitator_Three__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 3 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_3_email__c</fullName>
        <formula>Facilitator_Three__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 3 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_Being_Recruited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for OE coordinator to indicate that the meeting should go into the pool for ambassador recruitment</description>
        <label>Facilitator Being Recruited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_Feedback_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(LG201427) Please check with dev team before modifing- this field is updated with a force.com site  Facilitator Feedback has been entered into the system</description>
        <label>Facilitator Feedback Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_Name_Text__c</fullName>
        <formula>Facilitator1__r.FirstName + &apos; &apos; +  Facilitator1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_Not_Secured_Count__c</fullName>
        <formula>IF( Unable_to_secure_facilitator__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Not Secured Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilitator_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by Open Enrollment to indicate that the facilitator(s) has been secured for the meeting.  This should trigger an email to be sent out to the facilitator</description>
        <label>Facilitator Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_Three__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LG(20140318)This lookup field is filtered to show only the facilitator contacts on the Facilitator Account.</description>
        <label>Facilitator 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment (Facilitator 3)</relationshipLabel>
        <relationshipName>Open_Enrollment3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_Two__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LG(20140318) This lookup field is filtered to only show the facilitators on the Facilitator Account.</description>
        <label>Facilitator 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Facilitator_Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Enrollment (Facilitator 2)</relationshipLabel>
        <relationshipName>Open_Enrollment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_three_Type__c</fullName>
        <formula>TEXT(Facilitator_Three__r.Facilitator_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 3 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_two_Type__c</fullName>
        <formula>TEXT(Facilitator_Two__r.Facilitator_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator 2 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Formula__c</fullName>
        <formula>&apos;facID=&apos;+  Facilitator1__r.OE_AMB_FacilitatorID__c +&apos;&amp;meetingID=&apos;+ CASESAFEID( Id ) +&apos;&amp;email=&apos;+  Facilitator1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Not_Received_Within_14_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Not Received Within 14 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_String__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feedback String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographical_Region__c</fullName>
        <description>Formula field to convert the state location of the meeting to a geographical region</description>
        <formula>IF(AND(Red_Carpet__c ,ISPICKVAL(Recruitment_of_Facilitator_Needed__c, &apos;Yes&apos;)), &apos;Wellness Kit&apos;, IF(TEXT(Meeting_Type__c) = &apos;Virtual (Webinar)&apos;, &apos;Virtual (Webinar)&apos;, CASE(Meeting_State__c, &apos;AL&apos;,&apos;South East&apos;,&apos;AK&apos;,&apos;n/a&apos;,&apos;AZ&apos;,&apos;West&apos;,&apos;AR&apos;,&apos;Central&apos;,&apos;CA&apos;,&apos;West&apos;,&apos;CO&apos;,&apos;West&apos;,&apos;CT&apos;,&apos;North East&apos;,&apos;DC&apos;, &apos;North East&apos;,&apos;DE&apos;,&apos;South East&apos;,&apos;FL&apos;,&apos;South East&apos;,&apos;GA&apos;,&apos;South East&apos;, 
&apos;HI&apos;,&apos;n/a&apos;,&apos;ID&apos;,&apos;West&apos;,&apos;IL&apos;,&apos;Central&apos;,&apos;IN&apos;,&apos;Central&apos;,&apos;IA&apos;,&apos;Central&apos;,&apos;KS&apos;,&apos;Central&apos;,&apos;KY&apos;,&apos;Central&apos;,&apos;LA&apos;,&apos;South East&apos;,&apos;ME&apos;,&apos;North East&apos;,&apos;MD&apos;,&apos;South East&apos;,&apos;MA&apos;,&apos;North East&apos;,&apos;MI&apos;,&apos;Central&apos;,&apos;MN&apos;,&apos;Central&apos;,&apos;MS&apos;,&apos;South East&apos;,&apos;MO&apos;,&apos;Central&apos;,&apos;MT&apos;,&apos;West&apos;,&apos;NE&apos;,&apos;Central&apos;,&apos;NV&apos;,&apos;West&apos;,&apos;NH&apos;,&apos;North East&apos;,&apos;NJ&apos;,&apos;North East&apos;,&apos;NM&apos;,&apos;West&apos;,&apos;NY&apos;,&apos;North East&apos;,&apos;NC&apos;,&apos;South East&apos;, 
&apos;ND&apos;,&apos;Central&apos;,&apos;OH&apos;,&apos;Central&apos;,&apos;OK&apos;,&apos;Central&apos;,&apos;OR&apos;,&apos;West&apos;,&apos;PA&apos;,&apos;North East&apos;,&apos;RI&apos;,&apos;North East&apos;,&apos;SC&apos;,&apos;South East&apos;,&apos;SD&apos;,&apos;Central&apos;,&apos;TN&apos;,&apos;South East&apos;,&apos;TX&apos;,&apos;Central&apos;,&apos;UT&apos;,&apos;West&apos;,&apos;VT&apos;,&apos;North East&apos;,&apos;VA&apos;,&apos;South East&apos;,&apos;WA&apos;,&apos;West&apos;,&apos;WV&apos;,&apos;South East&apos;,&apos;WI&apos;,&apos;Central&apos;,&apos;WY&apos;,&apos;West&apos;,&apos;n/a&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographical Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>OE_Grouping__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Payout__c</fullName>
        <description>Total pay out for consultant - hours billed times bill rate</description>
        <formula>Actual_Hours_Billed__c  *  Consultant_Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_would_you_like_your_OE_Book_deliever__c</fullName>
        <label>How would you like your OE Book deliever</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O/E Booklet</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Digimag</fullName>
                </value>
                <value>
                    <fullName>O/E Microsite</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Count__c</fullName>
        <description>Antham associate attending meeting</description>
        <formula>AE_Attending_Count__c +  AM_Attending_Count__c + Other_Associate_Count__c +  Ambassador_Count__c +  SAR_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_this_meeting_Buddy_Program_Eligible__c</fullName>
        <formula>IF(
AND(Expected_of_Employees__c &gt;= 200,
ISPICKVAL(Bilingual__c , &apos;No&apos;),
OR(ISPICKVAL(Meeting_Type__c, &apos;Health Fair&apos;),ISPICKVAL(Meeting_Type__c,&apos;Benefit Fair&apos;))
),
IMAGE(&quot;/resource/1557754487000/OpenEnrollment&quot;, &quot;GreenCheck&quot;, 80, 195),
&quot;This Meeting is not Buddy Program Eligible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is this meeting Buddy Program Eligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Ambassador_Only__c</fullName>
        <description>used to indicate that meeting has no travel budget and only a &quot;Local Ambassador&quot; should volunteer.</description>
        <label>Local Ambassador Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot; &amp;  Meeting_Street__c &amp; &quot;,+&quot; &amp;  Meeting_City__c  &amp; &quot;+&quot;&amp; Meeting_Zip_Code__c &amp;&quot;&amp;t=m&amp;z=16&quot;,

IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp;  Meeting_Street__c &amp; &quot;,+&quot; &amp;  Meeting_City__c  &amp; &quot;+&quot;&amp; Meeting_Zip_Code__c &amp;&quot;&amp;zoom=16&amp;format=png&amp;maptype=roadmap&amp;mobile=false&amp;language=English&amp;markers=|color:Yellow|label:Address|&quot; &amp;  Meeting_Street__c &amp; &quot;,+&quot; &amp;  Meeting_City__c  &amp; &quot;+&quot;&amp; Meeting_Zip_Code__c &amp;&quot;&amp;size=180x180&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate a confirmation of shippment email was received.</description>
        <label>Materials Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Materials_Needed__c</fullName>
        <label>Materials Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promo only needed</fullName>
                </value>
                <value>
                    <fullName>Collateral only needed</fullName>
                </value>
                <value>
                    <fullName>Promo and Collateral Needed</fullName>
                </value>
                <value>
                    <fullName>No Promo or Collateral Needed</fullName>
                </value>
                <value>
                    <fullName>OE Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Materials_Order_On_Standby__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Materials order is too early to place.</description>
        <label>Materials Order On Standby</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>